Fix Modal Header Dark Mode.

--- a/resources/sass/_custom.scss
+++ b/resources/sass/_custom.scss
@@ -47,7 +47,6 @@ html[dir="rtl"] .modal-content .btn-close {
 html[dir="rtl"] .modal-header {
     align-items: center;
     min-height: 3.5rem;
-    background: #fff;
     padding: 0 1.5rem 0 1.5rem;
 }
 
